feat: impl get tx by hash api
